# wandb_client

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  build.sh  requirements.txt
docs/: design.md  roadmap.md  usage-guide.md
include/wandb_client/: config.h  metrics.h  py_runtime.h  run.h
src/: CMakeLists.txt  config.cc  metrics.cc  py_runtime.cc  run.cc
tests/: CMakeLists.txt  test_config.cc  test_helpers.h  test_metrics.cc  test_py_runtime.cc  test_run.cc
tests/integration/: CMakeLists.txt  test_metrics_online.cc  test_run_online.cc
